# AstroSpaceScript

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  spacetime.json  spacetime.local.json
auth-server/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
auth-server/src/: auth.ts  server.ts
spacetimedb/: Cargo.toml  README.md
spacetimedb/src/: auth.rs  init.rs  lib.rs  lifecycle.rs  procedures.rs  types.rs
spacetimedb/src/reducers/: person.rs
spacetimedb/src/scheduled/: close_in.rs  mod.rs
spacetimedb/src/tables/: data_tables.rs  mod.rs  visibility_tables.rs
src/: App.tsx  AuthScreen.tsx  AuthTopBar.tsx  auth.css  auth.ts  main.tsx  styles.css
src/components/: BlackHoleLensingPass.tsx  GalaxyTrafficRoutes.tsx  MoonFocusController.tsx  MoonSystem.tsx  OrbitRing.tsx  ProceduralPlanet.tsx  SceneEnvironment.tsx  SystemPrimary.tsx
src/data/: UniverseRepository.ts  UniverseSpaceTimeBridge.ts  mockUniverse.ts  useUniverse.ts
src/data/spacetime/: SpacetimeUniverseRepository.ts
src/domain/: ownership.ts  universe.ts
src/module_bindings/: add_reducer.ts  galaxy_table.ts  index.ts  types.ts
src/module_bindings/types/: procedures.ts  reducers.ts
src/procedural/: galaxyGeometry.ts  planetSeed.ts  tidalOrientation.ts
src/scenes/: GalaxyOverviewScene.tsx  GalaxyScene.tsx  PlanetScene.tsx  SolarSystemScene.tsx
src/src/: auth.css
