[package]
name = "rust_project"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.6.*" }
log = "0.4"
serde = { version = "1.0.229", features = ["derive"] }
